--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon src/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
