--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "desafio-tres",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon src/server",
     "test": "echo \"Error: no test specified\" && exit 1"
