--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
+    "mongoose": "^6.1.7",
     "multer": "^1.4.3",
-    "socket.io": "^4.4.0"
+    "socket.io": "^4.4.0",
+    "socket.io-express-session": "^0.1.3"
   }
 }
